# phd-model-evaluations

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
phd_model_evaluations/cli/dataset/: create_lm_gap_challenge.py  create_lm_gap_challenge_arguments.py
phd_model_evaluations/cli/draw/: draw_lm_gap_features_plot.py  draw_lm_gap_features_plot_arguments.py  draw_plot.py  draw_plot_arguments.py
phd_model_evaluations/cli/evaluation/: check_model.py
phd_model_evaluations/cli/output/: convert_tsv_to_json.py  convert_tsv_to_json_arguments.py  generate_aggregated_results.py  generate_aggregated_results_arguments.py  generate_latex_table.py  generate_latex_table_arguments.py  generate_model_information.py  generate_model_information_arguments.py  generate_model_parameters.py  generate_model_parameters_arguments.py  generate_models_results.py  generate_models_results_arguments.py
phd_model_evaluations/cli/statistics/: compute_correlations.py  compute_correlations_arguments.py
phd_model_evaluations/data/: dataset_configuration.py  dataset_info.py  input_with_prediction_tokens.py  input_with_seq2seq_prediction_tokens.py  loaded_dataset.py  loaded_dataset_data.py  loaded_dataset_mapping.py  loaded_dataset_mapping_single.py  loaded_dataset_text_line.py  prediction_base.py  prediction_for_aggregation.py  prediction_result.py  prediction_token.py  saved_dataset_data.py  token_prediction_mlm.py  tokenized_token.py
phd_model_evaluations/data/arguments/: arguments_utils.py  latex_table_arguments.py  logger_arguments.py  model_arguments.py
phd_model_evaluations/data/feature/: aggregated_feature.py  draw_option_feature.py  feature_data.py  feature_statistics.py  line_features.py  lm_gap_checker_utils.py  selected_lines.py
phd_model_evaluations/data/latex/: latex_table_type.py
phd_model_evaluations/data/lm_gap/: lm_gap_context_line.py  lm_gap_context_line_with_gap.py  lm_gap_dataset.py  lm_gap_dataset_data.py  lm_gap_line.py  lm_gap_output_statistics.py  lm_gap_prediction_line.py  lm_gap_result.py  lm_gap_result_many.py  prediction_type_mlm.py
phd_model_evaluations/data/metric/: metric_configuration.py  metric_for_best_model.py
phd_model_evaluations/data/model/: architecture_type.py  model_info.py  model_parameter_label.py  model_parameters.py  seq2seq_task_specific_paramaters.py  task_specific_paramaters.py
phd_model_evaluations/data/results/: aggregated_results.py  dataset_result.py  empty_dataset_result.py  evaluation_result.py  lm_gap_results.py  table_data.py
phd_model_evaluations/data/statistics/: accepted_score_statistics.py  loss_statistics.py  positions_statistics.py  score_statistics.py
phd_model_evaluations/draw/: draw_lm_gap_feature_plot.py  draw_plot.py
phd_model_evaluations/model/: custom_classifier.py  custom_model_for_sequence_classification.py
phd_model_evaluations/output/: convert_tsv_to_json.py  generate_aggregated_results.py  generate_latex_table.py  generate_model_information.py  generate_model_parameters.py  generate_models_results.py
phd_model_evaluations/statistics/: compute_correlations.py  generate_positions_statistics.py  generate_probability_statistics.py
phd_model_evaluations/train/: data_utils.py
phd_model_evaluations/utils/: collator_utils.py  common_utils.py  dataset_utils.py  latex_utils.py  model_names.py  model_utils.py  prediction_utils.py  regex_utils.py  tokenization_utils.py  translations.py  type_utils.py
scripts/: check_models.sh  copy_generated_data.sh  copy_output_models.sh  expected_fine_tuning_score.json  generate_and_draw.sh  parameters_fine_tuning.json  run_fine_tuning.sh  run_lm_gap_clm.sh  run_lm_gap_mlm.sh  run_lm_gap_seq2seq.sh  run_loss.sh  run_seq2seq.sh
scripts/lm-gap/: aggregate_lm_gap_features.sh  create_dev_1k_set.sh  split_lm_gap_features.sh
scripts/results/: model_information.json  model_parameters.json  table-model_information.json  table-model_information.tex  table-model_parameters.json  table-model_parameters.tex
scripts/results/glue/loss/: part-train.json
tests/: conftest.py
tests/integration_tests/: conftest.py
tests/unit_tests/: conftest.py
(+624 files in other folders)
